  named list or zero if the series is not present
- New function, isconst(): determines whether a series or vector has 
  a constant value, and optionally tests for either time-invariance 
  or cross-sectional invariance for panel-data series
- New function, strsub(): substitutes a specified replacement for a 
  specified sub-string in its first (string) argument
- "estimate" command: document the --quiet flag; and also enable the 
  --quiet option for "system"
- "summary" command: add an option to print summary stats for the 
  columns of a named matrix
- "outfile" command: add facility to redirect output to stderr or 
  stdout
- "setobs" command: add option to attach observation labels from a 
  named file
- "heckit" command: switch to use of analytical Hessian for the
  covariance matrix
- New function, errmsg(): returns the gretl error message associated 
  with a given integer error code
- New function, rownames(): complements the colnames() function for 
  matrices
- New function mrls(); implements restricted least squares estimation 
  for data in matrix form
- The sdc() function (column standard deviations): add an optional 
  second argument to control the divisor
- The getenv() function: add a second, optional parameter to get the 
  numerical rather than the string value of an environment variable
- New "set" variable, matrix_mask, which can be used to control the 
  included observations when constructing matrices from series
- Accessors $test and $pvalue: generalize to allow matrix values 
  (e.g. from the coint2 command); also ensure that these values get 
  recorded when using "restrict" in connection with a system 
  estimator such as SUR
- "catch" modifier for commands: make this catch a wider range of 
  errors
- Functions corr(), cov() and fcstats(): accept two vector arguments 
  in place of two series
- Allow deletion of local matrices within functions
- Remove deprecated aliases "noecho" and "seed"
- Remove redundant function "makemask"